Add test for Carturesti search

--- a/serenity.properties
+++ b/serenity.properties
@@ -1,2 +1,4 @@
 serenity.project.name=Serenity and JUnit Quick Start Project
-serenity.test.root=starter
+serenity.test.root=carturesti
+webdriver.driver=chrome
+webdriver.chrome.driver = resources\\chromedriver.exe
