--- a/serenity.properties
+++ b/serenity.properties
@@ -1,4 +1,4 @@
-serenity.project.name=Serenity and JUnit Quick Start Project
+serenity.project.name=Serenity and JUnit Carturesti Tests
 serenity.test.root=carturesti
 webdriver.driver=chrome
 webdriver.chrome.driver = resources\\chromedriver.exe
